--- a/index.css
+++ b/index.css
@@ -5,8 +5,8 @@
 }
 body {
   font-family: 'Poppins', sans-serif;
-  background: #f2f2f2;
-  color: #bb2f2f;
+  background: #4c4545;
+  color: #ff0000;
 }
 
 .container{
